Fixed the articles section (align top)

--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ nav {
   display: inline-block;
   width: 32%;
   margin-bottom: 10px;
-  padding: 15px; }
+  padding: 15px;
+  vertical-align: top; }
   .articles-container article h2 {
     font-size: 20px;
     font-weight: bold;
