--- a/style.css.scss
+++ b/style.css.scss
@@ -99,6 +99,8 @@ nav {
 		width: 32%;
 		margin-bottom: 10px;
 		padding: 15px;
+		vertical-align: top;
+
 
 		h2 {
 			font-size: 20px;
